@@ -36,16 +36,6 @@ name|java
 operator|.
 name|io
 operator|.
-name|DataOutputStream
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
 name|IOException
 import|;
 end_import
@@ -86,21 +76,47 @@ name|java
 operator|.
 name|util
 operator|.
-name|*
+name|ArrayList
 import|;
 end_import
 
 begin_import
 import|import
-name|com
+name|java
 operator|.
-name|google
+name|util
 operator|.
-name|common
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
 operator|.
-name|annotations
+name|util
 operator|.
-name|VisibleForTesting
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
 import|;
 end_import
 
@@ -213,20 +229,6 @@ operator|.
 name|fs
 operator|.
 name|Path
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hdfs
-operator|.
-name|DFSConfigKeys
 import|;
 end_import
 
@@ -424,6 +426,20 @@ name|RemoteException
 import|;
 end_import
 
+begin_import
+import|import
+name|com
+operator|.
+name|google
+operator|.
+name|common
+operator|.
+name|annotations
+operator|.
+name|VisibleForTesting
+import|;
+end_import
+
 begin_comment
 comment|/**  * The class provides utilities for accessing a NameNode.  */
 end_comment
@@ -465,11 +481,11 @@ name|MAX_NOT_CHANGED_ITERATIONS
 init|=
 literal|5
 decl_stmt|;
-DECL|field|createIdFile
+DECL|field|write2IdFile
 specifier|private
 specifier|static
 name|boolean
-name|createIdFile
+name|write2IdFile
 init|=
 literal|true
 decl_stmt|;
@@ -682,19 +698,21 @@ return|;
 block|}
 annotation|@
 name|VisibleForTesting
-DECL|method|setCreateIdFile (boolean create)
+DECL|method|setWrite2IdFile (boolean write2IdFile)
 specifier|public
 specifier|static
 name|void
-name|setCreateIdFile
+name|setWrite2IdFile
 parameter_list|(
 name|boolean
-name|create
+name|write2IdFile
 parameter_list|)
 block|{
-name|createIdFile
+name|NameNodeConnector
+operator|.
+name|write2IdFile
 operator|=
-name|create
+name|write2IdFile
 expr_stmt|;
 block|}
 DECL|field|nameNodeUri
@@ -935,17 +953,11 @@ expr_stmt|;
 comment|// if it is for test, we do not create the id file
 name|out
 operator|=
-name|createIdFile
-condition|?
 name|checkAndMarkRunning
 argument_list|()
-else|:
-literal|null
 expr_stmt|;
 if|if
 condition|(
-name|createIdFile
-operator|&&
 name|out
 operator|==
 literal|null
@@ -1136,6 +1148,11 @@ argument_list|(
 name|idPath
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|write2IdFile
+condition|)
+block|{
 name|out
 operator|.
 name|writeBytes
@@ -1154,6 +1171,7 @@ operator|.
 name|hflush
 argument_list|()
 expr_stmt|;
+block|}
 return|return
 name|out
 return|;
