@@ -168,20 +168,6 @@ name|hadoop
 operator|.
 name|fs
 operator|.
-name|BlockLocation
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|fs
-operator|.
 name|FSDataInputStream
 import|;
 end_import
@@ -504,7 +490,7 @@ name|server
 operator|.
 name|balancer
 operator|.
-name|NameNodeConnector
+name|TestBalancer
 import|;
 end_import
 
@@ -906,26 +892,16 @@ argument_list|(
 literal|"COLD"
 argument_list|)
 expr_stmt|;
-name|Dispatcher
+name|TestBalancer
 operator|.
-name|setBlockMoveWaitTime
-argument_list|(
-literal|1000L
-argument_list|)
+name|initTestSetup
+argument_list|()
 expr_stmt|;
 name|Dispatcher
 operator|.
 name|setDelayAfterErrors
 argument_list|(
 literal|1000L
-argument_list|)
-expr_stmt|;
-comment|// do not create id file since we will eat up all the disk space
-name|NameNodeConnector
-operator|.
-name|setCreateIdFile
-argument_list|(
-literal|false
 argument_list|)
 expr_stmt|;
 block|}
